--- a/v2/frontend/css/metadata.css
+++ b/v2/frontend/css/metadata.css
@@ -6,6 +6,7 @@
     top: auto;
     bottom: 0;
     z-index: 1;
+    background: red;
 }
 
 /* roman numerals */
