--- a/v2/frontend/css/svg.css
+++ b/v2/frontend/css/svg.css
@@ -5,7 +5,8 @@ svg {
     width: 100%;
     height: auto;
     position: static;
-    z-index: 1;
+    z-index: 4;
+    transform: scale(2.7) translate(0, 180px);
 }
 
 .svg-path {
@@ -20,4 +21,5 @@ svg {
 .svg-blur svg {
     filter: blur(25px);
     transition: 150ms filter ease-in;
+    z-index: 0;
 }
